[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Header-dinrundschriftmittel.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/Icon/carrot.tres" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/GameOverUI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 144
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "flip"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver/Carrot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -10, 10 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOver/Carrot2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( -10, 10 ), Vector2( 10, 10 ) ]
}

[node name="GameOverCanvas" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GameOver" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.486275, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrotsSpawner" type="Node2D" parent="GameOver"]

[node name="Carrot" type="Sprite" parent="GameOver"]
position = Vector2( 600, 400 )
scale = Vector2( -5.16065, 10 )
texture = ExtResource( 2 )

[node name="Carrot2" type="Sprite" parent="GameOver"]
position = Vector2( 1700, 400 )
scale = Vector2( -5.16065, 10 )
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="GameOver"]

[node name="Label" type="Label" parent="GameOver/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 353.5
margin_right = 2340.0
margin_bottom = 498.5
custom_fonts/font = SubResource( 1 )
text = "You Win!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "flip"
anims/flip = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
